# jsish

./: .gitignore  LICENSE  README.md  jsish.h
test/: CMakeLists.txt  build.sh  test-decode.c  test-valid.json  test.c
